ng serve enabled

--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,6 +1,7 @@
-<p>login-form works!</p>
 
 <div class="container">
+    <h1>login-form component!</h1>
+
     <form action="">
         <div>
             <label for="username">Email / Username</label>
