--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,6 +1,7 @@
-<p>register-form works!</p>
 
 <div class="container">
+    <h1>register-form component!</h1>
+
     <form action="">
         <div>
             <label for="username">Email / Username</label>
